# Crop_Recommendation

./: AI-MODEL.py  Model.py  README.md  new.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
